2022-10-01  Ola Jeppsson  <ola.jeppsson@gmail.com>

	Merge sim/epiphany-elf and sim/testsuite/sim/epiphany-elf into
	sim/testsuite/epiphany.
	Directory moved from sim/testsuite/sim/epiphany-elf to
	sim/testsuite/epiphany.

	* epiphany-elf/exit47.s: Test 'moved' here from
	sim/testsuite/epiphany-elf.
	* epiphany-elf/hello.s: Remove. Code covered in other tests.
	* epiphany-elf/loop.s: Remove. This was never used.

2019-03-24  Ola Jeppsson  <ola@adapteva.com>

	* multicore/e-lib-inl.h: Remove global __loader_flags ABI
	variable. It's already defined in crt0.o

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* mul.cgs: Remove.

2016-01-12  Ola Jeppsson  <ola@adapteva.com>

	* multicore/mmr-deadlock.c: New test.

2015-12-21  Ola Jeppsson  <ola@adapteva.com>

	* fix.cgs: Test flags for MIN_INT (-2^31).
	* fmax.cgs: Add test for flags.

2015-12-15  Ola Jeppsson  <ola@adapteva.com>

	* mul.cgs: New test.

2015-12-15  Ola Jeppsson  <ola@adapteva.com>

	* bitr.cgs: Test that negative flag is set correctly.
	* bitr16.cgs: Likewise.

2015-12-04  Ola Jeppsson  <ola@adapteva.com>

	* multicore/domino.c: Set rows and cols to 4 in sim flags.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* multicore/multicore.exp (ldflags): Adjust __stack to 0xefff0, which
	is just below the MMR area.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* multicore/domino-dma.c (next_hop): Add case for when groupid=0 and
	number of rows is 1.
	(print_route): Eliminate possibility for uninitialized value in path.
	* multicore/domino.c (next_hop): Add case for when groupid=0 and
	number of rows is 1.
	(print_route): Eliminate possibility for uninitialized value in path.

2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* multicore/multicore.exp (ldflags): Define section start of
	workgroup_cfg and ext_mem_cfg.
	* multicore/e-lib-inl.h (barrier): Add compiler barrier macro.
	(e_objtype_t): Import enum from e-lib.
	(e_chiptype_t): Import enum from e-lib.
	(e_group_config_t): Import struct from e-lib.