@@ -6,10 +6,6 @@ if ![istarget epiphany*-*-*] {
 global global_ld_options
 global global_sim_options
 
-# load support procs (none yet)
-# load_lib cgen.exp
-
-
 if ![info exists global_sim_options] {
     set global_sim_options ""
 }
@@ -25,7 +21,7 @@ set orig_global_ld_options "$global_ld_options"
 set all_machs "epiphany32"
 
 set board [target_info name]
-
+unset_currtarget_info ldscript
 
 if {[board_info $board sim,ldflags] != ""} {
     set global_ld_options [board_info $board sim,ldflags]
