@@ -12,11 +12,11 @@ if ![info exists global_ld_options] {
 set orig_global_ld_options "$global_ld_options"
 
 
-# load support procs (none yet)
-# load_lib cgen.exp
-
 # all machines
 set all_machs "epiphany32"
+
+set board [target_info name]
+unset_currtarget_info ldscript
 
 if {[board_info target sim,ldflags] != ""} {
     set global_ld_options [board_info target sim,ldflags]
